修正Jwt过滤器bug + 完善代码规范性 (#8)
* Update jwt interceptor function, create json convertor and add an exception handler which deal with the exception comes from request body annotation

* Create FileManager.java to manage file storage

* Fix bugs in jwt filter, create UnAuthController to handle requests without token and simplify code block in file store

* Add comments

* Fix bugs in JWTFilter.java

---------

Co-authored-by: Jim Gu <gwt200407@gmail.com>